@@ -1,5 +1,5 @@
 /*
- * Copyright (c) Forge Development LLC and contributors
+ * Minecraft Forge - Forge Development LLC
  * SPDX-License-Identifier: LGPL-2.1-only
  */
 
@@ -9,7 +9,9 @@ import java.util.EnumSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import com.mojang.logging.LogUtils;
+import net.minecraftforge.fml.loading.AdvancedLogMessageAdapter;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.objectweb.asm.Label;
 import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.Type;
@@ -19,7 +21,6 @@ import org.objectweb.asm.tree.FieldNode;
 import org.objectweb.asm.tree.MethodNode;
 
 import cpw.mods.modlauncher.serviceapi.ILaunchPluginService;
-import org.slf4j.Logger;
 
 /**
  * Modifies specified enums to allow runtime extension by making the $VALUES field non-final and
@@ -27,17 +28,16 @@ import org.slf4j.Logger;
  */
 public class RuntimeEnumExtender implements ILaunchPluginService {
 
-    private static final Logger LOGGER = LogUtils.getLogger();
-    private static final Type STRING = Type.getType(String.class);
-    private static final Type ENUM = Type.getType(Enum.class);
-    private static final Type MARKER_IFACE = Type.getType("Lnet/minecraftforge/common/IExtensibleEnum;");
-    private static final Type ARRAY_UTILS = Type.getType("Lorg/apache/commons/lang3/ArrayUtils;"); //Don't directly reference this to prevent class loading.
-    private static final String ADD_DESC = Type.getMethodDescriptor(Type.getType(Object[].class), Type.getType(Object[].class), Type.getType(Object.class));
-    private static final Type UNSAFE_HACKS = Type.getType("Lnet/minecraftforge/fml/unsafe/UnsafeHacks;"); //Again, not direct reference to prevent class loading.
-    private static final String CLEAN_DESC = Type.getMethodDescriptor(Type.VOID_TYPE, Type.getType(Class.class));
-    private static final String NAME_DESC = Type.getMethodDescriptor(STRING);
-    private static final String EQUALS_DESC = Type.getMethodDescriptor(Type.BOOLEAN_TYPE, STRING);
-    private static final int FLAGS = Opcodes.ACC_PRIVATE | Opcodes.ACC_STATIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC;
+    private static final Logger LOGGER = LogManager.getLogger();
+    private final Type STRING = Type.getType(String.class);
+    private final Type ENUM = Type.getType(Enum.class);
+    private final Type MARKER_IFACE = Type.getType("Lnet/minecraftforge/common/IExtensibleEnum;");
+    private final Type ARRAY_UTILS = Type.getType("Lorg/apache/commons/lang3/ArrayUtils;"); //Don't directly reference this to prevent class loading.
+    private final String ADD_DESC = Type.getMethodDescriptor(Type.getType(Object[].class), Type.getType(Object[].class), Type.getType(Object.class));
+    private final Type UNSAFE_HACKS = Type.getType("Lnet/minecraftforge/fml/unsafe/UnsafeHacks;"); //Again, not direct reference to prevent class loading.
+    private final String CLEAN_DESC = Type.getMethodDescriptor(Type.VOID_TYPE, Type.getType(Class.class));
+    private final String NAME_DESC = Type.getMethodDescriptor(STRING);
+    private final String EQUALS_DESC = Type.getMethodDescriptor(Type.BOOLEAN_TYPE, STRING);
 
     @Override
     public String name() {
@@ -48,15 +48,9 @@ public class RuntimeEnumExtender implements ILaunchPluginService {
     private static final EnumSet<Phase> NAY = EnumSet.noneOf(Phase.class);
 
     @Override
-    public EnumSet<Phase> handlesClass(Type classType, boolean isEmpty) {
-        if (isEmpty)
-            return NAY;
-
-        String internalName = classType.getInternalName();
-        if (internalName.startsWith("net/minecraftforge/") || internalName.startsWith("com/mojang/"))
-            return NAY;
-
-        return YAY;
+    public EnumSet<Phase> handlesClass(Type classType, boolean isEmpty)
+    {
+        return isEmpty ? NAY : YAY;
     }
 
     @Override
@@ -65,85 +59,75 @@ public class RuntimeEnumExtender implements ILaunchPluginService {
         if ((classNode.access & Opcodes.ACC_ENUM) == 0)
             return ComputeFlags.NO_REWRITE;
 
-        if (!classNode.interfaces.contains(MARKER_IFACE.getInternalName()))
-            return ComputeFlags.NO_REWRITE;
-
         Type array = Type.getType("[" + classType.getDescriptor());
-        String arrayDesc = array.getDescriptor();
+        final int flags = Opcodes.ACC_PRIVATE | Opcodes.ACC_STATIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC;
 
-        FieldNode values = classNode.fields.stream().filter(f -> f.desc.equals(arrayDesc) && ((f.access & FLAGS) == FLAGS)).findFirst().orElse(null);
-
+        FieldNode values = classNode.fields.stream().filter(f -> f.desc.contentEquals(array.getDescriptor()) && ((f.access & flags) == flags)).findFirst().orElse(null);
+        
+        if (!classNode.interfaces.contains(MARKER_IFACE.getInternalName())) {
+            return ComputeFlags.NO_REWRITE;
+        }
+        
         //Static methods named "create" with first argument as a string
         List<MethodNode> candidates = classNode.methods.stream()
                 .filter(m -> ((m.access & Opcodes.ACC_STATIC) != 0) && m.name.equals("create"))
-                .toList();
-
+                .collect(Collectors.toList());
+        
         if (candidates.isEmpty()) {
             throw new IllegalStateException("IExtensibleEnum has no candidate factory methods: " + classType.getClassName());
         }
-
-        for (var mtd : candidates)
+        
+        candidates.forEach(mtd ->
         {
             Type[] args = Type.getArgumentTypes(mtd.desc);
             if (args.length == 0 || !args[0].equals(STRING)) {
-                if (LOGGER.isErrorEnabled(LogUtils.FATAL_MARKER))
-                {
-                    StringBuilder sb = new StringBuilder();
+                LOGGER.fatal(()->new AdvancedLogMessageAdapter(sb-> {
                     sb.append("Enum has create method without String as first parameter:\n");
                     sb.append("  Enum: ").append(classType.getDescriptor()).append("\n");
                     sb.append("  Target: ").append(mtd.name).append(mtd.desc).append("\n");
-                    LOGGER.error(LogUtils.FATAL_MARKER, sb.toString());
-                }
+                }));
                 throw new IllegalStateException("Enum has create method without String as first parameter: " + mtd.name + mtd.desc);
             }
 
             Type ret = Type.getReturnType(mtd.desc);
             if (!ret.equals(classType)) {
-                if (LOGGER.isErrorEnabled(LogUtils.FATAL_MARKER))
-                {
-                    StringBuilder sb = new StringBuilder();
+                LOGGER.fatal(()->new AdvancedLogMessageAdapter(sb-> {
                     sb.append("Enum has create method with incorrect return type:\n");
                     sb.append("  Enum: ").append(classType.getDescriptor()).append("\n");
                     sb.append("  Target: ").append(mtd.name).append(mtd.desc).append("\n");
                     sb.append("  Found: ").append(ret.getClassName()).append(", Expected: ").append(classType.getClassName());
-                    LOGGER.error(LogUtils.FATAL_MARKER, sb.toString());
-                }
+                }));
                 throw new IllegalStateException("Enum has create method with incorrect return type: " + mtd.name + mtd.desc);
             }
-
+            
             Type[] ctrArgs = new Type[args.length + 1];
             ctrArgs[0] = STRING;
             ctrArgs[1] = Type.INT_TYPE;
-            System.arraycopy(args, 1, ctrArgs, 2, args.length - 1);
+            for (int x = 1; x < args.length; x++)
+                ctrArgs[1 + x] = args[x];
 
             String desc = Type.getMethodDescriptor(Type.VOID_TYPE, ctrArgs);
 
             MethodNode ctr = classNode.methods.stream().filter(m -> m.name.equals("<init>") && m.desc.equals(desc)).findFirst().orElse(null);
             if (ctr == null)
             {
-                if (LOGGER.isErrorEnabled(LogUtils.FATAL_MARKER))
-                {
-                    StringBuilder sb = new StringBuilder();
+                LOGGER.fatal(()->new AdvancedLogMessageAdapter(sb-> {
                     sb.append("Enum has create method with no matching constructor:\n");
                     sb.append("  Enum: ").append(classType.getDescriptor()).append("\n");
                     sb.append("  Candidate: ").append(mtd.desc).append("\n");
                     sb.append("  Target: ").append(desc).append("\n");
                     classNode.methods.stream().filter(m -> m.name.equals("<init>")).forEach(m -> sb.append("        : ").append(m.desc).append("\n"));
-                    LOGGER.error(LogUtils.FATAL_MARKER, sb.toString());
-                }
+                }));
                 throw new IllegalStateException("Enum has create method with no matching constructor: " + desc);
             }
 
             if (values == null)
             {
-                if (LOGGER.isErrorEnabled(LogUtils.FATAL_MARKER))
-                {
-                    StringBuilder sb = new StringBuilder();
+                LOGGER.fatal(()->new AdvancedLogMessageAdapter(sb-> {
                     sb.append("Enum has create method but we could not find $VALUES. Found:\n");
                     classNode.fields.stream().filter(f -> (f.access & Opcodes.ACC_STATIC) != 0).
                             forEach(m -> sb.append("  ").append(m.name).append(" ").append(m.desc).append("\n"));
-                    LOGGER.error(LogUtils.FATAL_MARKER, sb.toString());
-                }
+                }));
                 throw new IllegalStateException("Enum has create method but we could not find $VALUES");
             }
 
@@ -236,7 +220,7 @@ public class RuntimeEnumExtender implements ILaunchPluginService {
                 ins.load(vars, classType);
                 ins.areturn(classType);
             }
-        }
+        });
         return ComputeFlags.COMPUTE_FRAMES;
     }
 
