@@ -1,47 +1,66 @@
 /*
- * Copyright (c) Forge Development LLC and contributors
- * SPDX-License-Identifier: LGPL-2.1-only
+ * Minecraft Forge
+ * Copyright (c) 2016-2021.
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation version 2.1
+ * of the License.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
 package net.minecraftforge.fml.loading;
 
-import com.mojang.logging.LogUtils;
 import cpw.mods.modlauncher.Launcher;
 import cpw.mods.modlauncher.api.*;
+import cpw.mods.modlauncher.serviceapi.ILaunchPluginService;
+import cpw.mods.modlauncher.util.ServiceLoaderUtils;
 import net.minecraftforge.fml.loading.moddiscovery.BackgroundScanHandler;
 import net.minecraftforge.fml.loading.moddiscovery.ModDiscoverer;
 import net.minecraftforge.fml.loading.moddiscovery.ModFile;
 import net.minecraftforge.fml.loading.moddiscovery.ModValidator;
 import net.minecraftforge.accesstransformer.service.AccessTransformerService;
 import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.fml.loading.progress.EarlyProgressVisualization;
+import net.minecraftforge.fml.loading.progress.StartupMessageManager;
 import net.minecraftforge.fml.loading.targets.CommonLaunchHandler;
 import net.minecraftforge.forgespi.Environment;
 import net.minecraftforge.forgespi.coremod.ICoreModProvider;
-import org.slf4j.Logger;
+import org.apache.commons.lang3.tuple.Pair;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.ServiceConfigurationError;
-import java.util.ServiceLoader;
-import java.util.Set;
+import java.nio.file.Paths;
+import java.util.*;
 import java.util.function.BiFunction;
+import java.util.stream.Collectors;
+
 import static net.minecraftforge.fml.loading.LogMarkers.CORE;
 import static net.minecraftforge.fml.loading.LogMarkers.SCAN;
 
-public class FMLLoader {
-    private static final Logger LOGGER = LogUtils.getLogger();
+public class FMLLoader
+{
+    private static final Logger LOGGER = LogManager.getLogger();
     private static AccessTransformerService accessTransformer;
+    private static ModDiscoverer modDiscoverer;
     private static ICoreModProvider coreModProvider;
+    private static ILaunchPluginService eventBus;
     private static LanguageLoadingProvider languageLoadingProvider;
     private static Dist dist;
     private static String naming;
     private static LoadingModList loadingModList;
     private static RuntimeDistCleaner runtimeDistCleaner;
     private static Path gamePath;
-    private static final VersionInfo versionInfo = VersionInfo.detect();
+    private static VersionInfo versionInfo;
     private static String launchHandlerName;
     private static CommonLaunchHandler commonLaunchHandler;
     public static Runnable progressWindowTick;
@@ -50,111 +69,121 @@ public class FMLLoader {
     private static boolean production;
     private static IModuleLayerManager moduleLayerManager;
 
-    static void onInitialLoad(IEnvironment env, Set<String> otherServices) throws IncompatibleEnvironmentException {
-        LOGGER.debug(CORE, "Detected version data : {}", versionInfo);
-        LOGGER.debug(CORE, "FML {} loading", LauncherVersion.getVersion());
+    static void onInitialLoad(IEnvironment environment, Set<String> otherServices) throws IncompatibleEnvironmentException
+    {
+        final String version = LauncherVersion.getVersion();
+        LOGGER.debug(CORE,"FML {} loading", version);
+        final Package modLauncherPackage = ITransformationService.class.getPackage();
+        LOGGER.debug(CORE,"FML found ModLauncher version : {}", modLauncherPackage.getImplementationVersion());
+        if (!modLauncherPackage.isCompatibleWith("4.0")) {
+            LOGGER.fatal(CORE,"Found incompatible ModLauncher specification : {}, version {} from {}", modLauncherPackage.getSpecificationVersion(), modLauncherPackage.getImplementationVersion(), modLauncherPackage.getImplementationVendor());
+            throw new IncompatibleEnvironmentException("Incompatible modlauncher found "+modLauncherPackage.getSpecificationVersion());
+        }
 
-        checkPackage(ITransformationService.class, "4.0", "ModLauncher");
-        accessTransformer  = getPlugin(env, "accesstransformer",  "1.0", "AccessTransformer");
-        /*eventBus       =*/ getPlugin(env, "eventbus",           "1.0", "EventBus");
-        runtimeDistCleaner = getPlugin(env, "runtimedistcleaner", "1.0", "RuntimeDistCleaner");
-        coreModProvider = getSingleService(ICoreModProvider.class, "CoreMod");
-        LOGGER.debug(CORE, "FML found CoreMod version : {}", JarVersionLookupHandler.getInfo(coreModProvider.getClass()).impl().version().orElse("MISSING"));
-        checkPackage(Environment.class, "2.0", "ForgeSPI");
+        accessTransformer = (AccessTransformerService) environment.findLaunchPlugin("accesstransformer").orElseThrow(()-> {
+            LOGGER.fatal(CORE,"Access Transformer library is missing, we need this to run");
+            return new IncompatibleEnvironmentException("Missing AccessTransformer, cannot run");
+        });
+
+        final Package atPackage = accessTransformer.getClass().getPackage();
+        LOGGER.debug(CORE,"FML found AccessTransformer version : {}", atPackage.getImplementationVersion());
+        if (!atPackage.isCompatibleWith("1.0")) {
+            LOGGER.fatal(CORE,"Found incompatible AccessTransformer specification : {}, version {} from {}", atPackage.getSpecificationVersion(), atPackage.getImplementationVersion(), atPackage.getImplementationVendor());
+            throw new IncompatibleEnvironmentException("Incompatible accesstransformer found "+atPackage.getSpecificationVersion());
+        }
+
+        eventBus = environment.findLaunchPlugin("eventbus").orElseThrow(()-> {
+            LOGGER.fatal(CORE,"Event Bus library is missing, we need this to run");
+            return new IncompatibleEnvironmentException("Missing EventBus, cannot run");
+        });
+
+        final Package eventBusPackage = eventBus.getClass().getPackage();
+        LOGGER.debug(CORE,"FML found EventBus version : {}", eventBusPackage.getImplementationVersion());
+        if (!eventBusPackage.isCompatibleWith("1.0")) {
+            LOGGER.fatal(CORE,"Found incompatible EventBus specification : {}, version {} from {}", eventBusPackage.getSpecificationVersion(), eventBusPackage.getImplementationVersion(), eventBusPackage.getImplementationVendor());
+            throw new IncompatibleEnvironmentException("Incompatible eventbus found "+eventBusPackage.getSpecificationVersion());
+        }
+
+        runtimeDistCleaner = (RuntimeDistCleaner)environment.findLaunchPlugin("runtimedistcleaner").orElseThrow(()-> {
+            LOGGER.fatal(CORE,"Dist Cleaner is missing, we need this to run");
+            return new IncompatibleEnvironmentException("Missing DistCleaner, cannot run!");
+        });
+        LOGGER.debug(CORE, "Found Runtime Dist Cleaner");
+
+        var coreModProviders = ServiceLoaderUtils.streamWithErrorHandling(ServiceLoader.load(FMLLoader.class.getModule().getLayer(), ICoreModProvider.class), sce -> LOGGER.fatal(CORE, "Failed to load a coremod library, expect problems", sce)).toList();
+
+        if (coreModProviders.isEmpty()) {
+            LOGGER.fatal(CORE, "Found no coremod provider. Cannot run");
+            throw new IncompatibleEnvironmentException("No coremod library found");
+        } else if (coreModProviders.size() > 1) {
+            LOGGER.fatal(CORE, "Found multiple coremod providers : {}. Cannot run", coreModProviders.stream().map(p -> p.getClass().getName()).collect(Collectors.toList()));
+            throw new IncompatibleEnvironmentException("Multiple coremod libraries found");
+        }
+
+        coreModProvider = coreModProviders.get(0);
+        final Package coremodPackage = coreModProvider.getClass().getPackage();
+        LOGGER.debug(CORE,"FML found CoreMod version : {}", coremodPackage.getImplementationVersion());
+
+
+        LOGGER.debug(CORE, "Found ForgeSPI package implementation version {}", Environment.class.getPackage().getImplementationVersion());
+        LOGGER.debug(CORE, "Found ForgeSPI package specification {}", Environment.class.getPackage().getSpecificationVersion());
+        if (Integer.parseInt(Environment.class.getPackage().getSpecificationVersion()) < 2) {
+            LOGGER.fatal(CORE, "Found an out of date ForgeSPI implementation: {}, loading cannot continue", Environment.class.getPackage().getSpecificationVersion());
+            throw new IncompatibleEnvironmentException("ForgeSPI is out of date, we cannot continue");
+        }
 
         try {
-            Class.forName("com.electronwill.nightconfig.core.Config", false, env.getClass().getClassLoader());
-            Class.forName("com.electronwill.nightconfig.toml.TomlFormat", false, env.getClass().getClassLoader());
+            Class.forName("com.electronwill.nightconfig.core.Config", false, environment.getClass().getClassLoader());
+            Class.forName("com.electronwill.nightconfig.toml.TomlFormat", false, environment.getClass().getClassLoader());
         } catch (ClassNotFoundException e) {
-            LOGGER.error(CORE, "Failed to load NightConfig");
+            LOGGER.fatal(CORE, "Failed to load NightConfig");
             throw new IncompatibleEnvironmentException("Missing NightConfig");
         }
     }
 
-    @SuppressWarnings("unchecked")
-    private static <T> T getPlugin(IEnvironment env, String id, String version, String name) throws IncompatibleEnvironmentException {
-        var plugin = env.findLaunchPlugin(id).orElse(null);
-        if (plugin == null) {
-            LOGGER.error(CORE, "{} library is missing, we need this to run", name);
-            throw new IncompatibleEnvironmentException("Missing " + name + ", cannot run");
-        }
-        checkPackage(plugin.getClass(), version, name);
-        return (T) plugin;
-    }
-
-    private static void checkPackage(Class<?> cls, String version, String name) throws IncompatibleEnvironmentException {
-        var pkg = cls.getPackage();
-        var info = JarVersionLookupHandler.getInfo(pkg);
-        LOGGER.debug(CORE, "Found {} version: {}", name, info.impl().version().orElse("MISSING"));
-
-        if (!pkg.isCompatibleWith(version)) {
-            LOGGER.error(CORE, "Found incompatible {} specification: {}, version {} from {}", name,
-                 info.spec().version().orElse("MISSING"),
-                 info.impl().version().orElse("MISSING"),
-                 info.impl().vendor().orElse("MISSING")
-             );
-            throw new IncompatibleEnvironmentException("Incompatible " + name + " found " + info.spec().version().orElse("MISSING"));
-        }
-    }
-
-    private static <T> T getSingleService(Class<T> clazz, String name) throws IncompatibleEnvironmentException {
-          var providers = new ArrayList<T>();
-          for (var itr = ServiceLoader.load(FMLLoader.class.getModule().getLayer(), clazz).iterator(); itr.hasNext(); ) {
-              try {
-                  providers.add(itr.next());
-              } catch (ServiceConfigurationError e) {
-                  LOGGER.error(CORE, "Failed to load a " + name + " library, expect problems", e);
-              }
-          }
-
-          if (providers.isEmpty()) {
-              LOGGER.error(CORE, "Found no {} provider. Cannot run", name);
-              throw new IncompatibleEnvironmentException("No " + name + " library found");
-          } else if (providers.size() > 1) {
-              LOGGER.error(CORE, "Found multiple {} providers: {}. Cannot run", name, providers.stream().map(p -> p.getClass().getName()).toList());
-              throw new IncompatibleEnvironmentException("Multiple " + name + " libraries found");
-          }
-
-          return providers.get(0);
-    }
-
-    static void setupLaunchHandler(final IEnvironment environment, final Map<String, Object> arguments) {
+    static void setupLaunchHandler(final IEnvironment environment, final Map<String, Object> arguments)
+    {
         final String launchTarget = environment.getProperty(IEnvironment.Keys.LAUNCHTARGET.get()).orElse("MISSING");
         arguments.put("launchTarget", launchTarget);
         final Optional<ILaunchHandlerService> launchHandler = environment.findLaunchHandler(launchTarget);
         LOGGER.debug(CORE, "Using {} as launch service", launchTarget);
         if (launchHandler.isEmpty()) {
-            LOGGER.error(CORE, "Missing LaunchHandler {}, cannot continue", launchTarget);
+            LOGGER.fatal(CORE,"Missing LaunchHandler {}, cannot continue", launchTarget);
             throw new RuntimeException("Missing launch handler: " + launchTarget);
         }
 
-        // TODO: [FML][Loader] What the fuck is the point of using a service if you require a specific concrete class
         if (!(launchHandler.get() instanceof CommonLaunchHandler)) {
-            LOGGER.error(CORE, "Incompatible Launch handler found - type {}, cannot continue", launchHandler.get().getClass().getName());
+            LOGGER.fatal(CORE, "Incompatible Launch handler found - type {}, cannot continue", launchHandler.get().getClass().getName());
             throw new RuntimeException("Incompatible launch handler found");
         }
         commonLaunchHandler = (CommonLaunchHandler)launchHandler.get();
         launchHandlerName = launchHandler.get().name();
-        gamePath = environment.getProperty(IEnvironment.Keys.GAMEDIR.get()).orElse(Path.of(".").toAbsolutePath());
+        gamePath = environment.getProperty(IEnvironment.Keys.GAMEDIR.get()).orElse(Paths.get(".").toAbsolutePath());
 
         naming = commonLaunchHandler.getNaming();
         dist = commonLaunchHandler.getDist();
         production = commonLaunchHandler.isProduction();
 
-        accessTransformer.getExtension().accept(Map.entry(naming, "srg"));
+        versionInfo = new VersionInfo(arguments);
+
+        StartupMessageManager.modLoaderConsumer().ifPresent(c->c.accept("Early Loading!"));
+        accessTransformer.getExtension().accept(Pair.of(naming, "srg"));
+
+        LOGGER.debug(CORE,"Received command line version data  : {}", versionInfo);
 
         runtimeDistCleaner.getExtension().accept(dist);
     }
-
-    public static List<ITransformationService.Resource> beginModScan(final Map<String,?> arguments) {
+    public static List<ITransformationService.Resource> beginModScan(final Map<String,?> arguments)
+    {
         LOGGER.debug(SCAN,"Scanning for Mod Locators");
-        var modDiscoverer = new ModDiscoverer(arguments);
+        modDiscoverer = new ModDiscoverer(arguments);
         modValidator = modDiscoverer.discoverMods();
         var pluginResources = modValidator.getPluginResources();
         return List.of(pluginResources);
     }
 
     public static List<ITransformationService.Resource> completeScan(IModuleLayerManager layerManager) {
+        progressWindowTick = EarlyProgressVisualization.INSTANCE.accept(dist, commonLaunchHandler.isData(), versionInfo.mcVersion());
         moduleLayerManager = layerManager;
         languageLoadingProvider = new LanguageLoadingProvider();
         backgroundScanHandler = modValidator.stage2Validation();
@@ -166,34 +195,43 @@ public class FMLLoader {
         return coreModProvider;
     }
 
-    public static LanguageLoadingProvider getLanguageLoadingProvider() {
+    public static LanguageLoadingProvider getLanguageLoadingProvider()
+    {
         return languageLoadingProvider;
+    }
+
+    static ModDiscoverer getModDiscoverer() {
+        return modDiscoverer;
     }
 
     public static CommonLaunchHandler getLaunchHandler() {
         return commonLaunchHandler;
     }
 
-    public static void addAccessTransformer(Path atPath, ModFile modName) {
+    public static void addAccessTransformer(Path atPath, ModFile modName)
+    {
         LOGGER.debug(SCAN, "Adding Access Transformer in {}", modName.getFilePath());
         accessTransformer.offerResource(atPath, modName.getFileName());
     }
 
-    public static Dist getDist() {
+    public static Dist getDist()
+    {
         return dist;
     }
 
-    public static void beforeStart(ModuleLayer gameLayer) {
-        ImmediateWindowHandler.acceptGameLayer(gameLayer);
-        ImmediateWindowHandler.updateProgress("Launching minecraft");
+    public static void beforeStart(ClassLoader launchClassLoader)
+    {
+        StartupMessageManager.modLoaderConsumer().ifPresent(c->c.accept("Launching minecraft"));
         progressWindowTick.run();
     }
 
-    public static LoadingModList getLoadingModList() {
+    public static LoadingModList getLoadingModList()
+    {
         return loadingModList;
     }
 
-    public static Path getGamePath() {
+    public static Path getGamePath()
+    {
         return gamePath;
     }
 
@@ -210,7 +248,7 @@ public class FMLLoader {
     }
 
     public static List<Map<String, String>> modLauncherModList() {
-        return Launcher.INSTANCE.environment().getProperty(IEnvironment.Keys.MODLIST.get()).orElse(List.of());
+        return Launcher.INSTANCE.environment().getProperty(IEnvironment.Keys.MODLIST.get()).orElseGet(Collections::emptyList);
     }
 
     public static String launcherHandlerName() {
