@@ -1,20 +1,16 @@
 /*
- * Copyright (c) Forge Development LLC and contributors
+ * Minecraft Forge - Forge Development LLC
  * SPDX-License-Identifier: LGPL-2.1-only
  */
 
 package net.minecraftforge.common.data;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
-import java.nio.file.Path;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.Supplier;
-import net.minecraft.data.CachedOutput;
+import net.minecraft.data.DataGenerator;
+import net.minecraft.data.HashCache;
 import net.minecraft.data.DataProvider;
-import net.minecraft.data.PackOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.PackType;
 import net.minecraft.sounds.SoundEvent;
@@ -22,13 +18,23 @@ import net.minecraftforge.registries.ForgeRegistries;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+
 /**
  * Data provider for the {@code sounds.json} file, which identifies sound definitions
  * for the various sound events in Minecraft.
  */
-public abstract class SoundDefinitionsProvider implements DataProvider {
+public abstract class SoundDefinitionsProvider implements DataProvider
+{
     private static final Logger LOGGER = LogManager.getLogger();
-    private final PackOutput output;
+    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create();
+    private final DataGenerator generator;
     private final String modId;
     private final ExistingFileHelper helper;
 
@@ -37,12 +43,13 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
     /**
      * Creates a new instance of this data provider.
      *
-     * @param output The {@linkplain PackOutput} instance provided by the data generator.
+     * @param generator The data generator instance provided by the event you are initializing this provider in.
      * @param modId The mod ID of the current mod.
      * @param helper The existing file helper provided by the event you are initializing this provider in.
      */
-    protected SoundDefinitionsProvider(final PackOutput output, final String modId, final ExistingFileHelper helper) {
-        this.output = output;
+    protected SoundDefinitionsProvider(final DataGenerator generator, final String modId, final ExistingFileHelper helper)
+    {
+        this.generator = generator;
         this.modId = modId;
         this.helper = helper;
     }
@@ -53,19 +60,20 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
     public abstract void registerSounds();
 
     @Override
-    public CompletableFuture<?> run(CachedOutput cache) {
+    public void run(HashCache cache) throws IOException
+    {
         this.sounds.clear();
         this.registerSounds();
         this.validate();
-        if (!this.sounds.isEmpty()) {
-            return this.save(cache, this.output.getOutputFolder(PackOutput.Target.RESOURCE_PACK).resolve(this.modId).resolve("sounds.json"));
+        if (!this.sounds.isEmpty())
+        {
+            this.save(cache, this.generator.getOutputFolder().resolve("assets/" + this.modId + "/sounds.json"));
         }
-
-        return CompletableFuture.allOf();
     }
 
     @Override
-    public String getName() {
+    public String getName()
+    {
         return "Sound Definitions";
     }
 
@@ -74,7 +82,8 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * Creates a new {@link SoundDefinition}, which will host a set of
      * {@link SoundDefinition.Sound}s and the necessary parameters.
      */
-    protected static SoundDefinition definition() {
+    protected static SoundDefinition definition()
+    {
         return SoundDefinition.definition();
     }
 
@@ -84,7 +93,8 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param name The name of the sound to create.
      * @param type The type of sound to create.
      */
-    protected static SoundDefinition.Sound sound(final ResourceLocation name, final SoundDefinition.SoundType type) {
+    protected static SoundDefinition.Sound sound(final ResourceLocation name, final SoundDefinition.SoundType type)
+    {
         return SoundDefinition.Sound.sound(name, type);
     }
 
@@ -94,7 +104,8 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      *
      * @param name The name of the sound to create.
      */
-    protected static SoundDefinition.Sound sound(final ResourceLocation name) {
+    protected static SoundDefinition.Sound sound(final ResourceLocation name)
+    {
         return sound(name, SoundDefinition.SoundType.SOUND);
     }
 
@@ -104,8 +115,9 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param name The name of the sound to create.
      * @param type The type of sound to create.
      */
-    protected static SoundDefinition.Sound sound(final String name, final SoundDefinition.SoundType type) {
-        return sound(ResourceLocation.parse(name), type);
+    protected static SoundDefinition.Sound sound(final String name, final SoundDefinition.SoundType type)
+    {
+        return sound(new ResourceLocation(name), type);
     }
 
     /**
@@ -114,8 +126,9 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      *
      * @param name The name of the sound to create.
      */
-    protected static SoundDefinition.Sound sound(final String name) {
-        return sound(ResourceLocation.parse(name));
+    protected static SoundDefinition.Sound sound(final String name)
+    {
+        return sound(new ResourceLocation(name));
     }
 
     // Addition methods
@@ -129,7 +142,8 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param soundEvent A {@code Supplier} for the given {@link SoundEvent}.
      * @param definition A {@link SoundDefinition} that defines the given sound.
      */
-    protected void add(final Supplier<SoundEvent> soundEvent, final SoundDefinition definition) {
+    protected void add(final Supplier<SoundEvent> soundEvent, final SoundDefinition definition)
+    {
         this.add(soundEvent.get(), definition);
     }
 
@@ -144,8 +158,9 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param soundEvent A {@link SoundEvent}.
      * @param definition The {@link SoundDefinition} that defines the given event.
      */
-    protected void add(final SoundEvent soundEvent, final SoundDefinition definition) {
-        this.add(soundEvent.location(), definition);
+    protected void add(final SoundEvent soundEvent, final SoundDefinition definition)
+    {
+        this.add(soundEvent.getLocation(), definition);
     }
 
     /**
@@ -155,7 +170,8 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param soundEvent The {@link ResourceLocation} that identifies the event.
      * @param definition The {@link SoundDefinition} that defines the given event.
      */
-    protected void add(final ResourceLocation soundEvent, final SoundDefinition definition) {
+    protected void add(final ResourceLocation soundEvent, final SoundDefinition definition)
+    {
         this.addSounds(soundEvent.getPath(), definition);
     }
 
@@ -171,63 +187,80 @@ public abstract class SoundDefinitionsProvider implements DataProvider {
      * @param soundEvent The name of the {@link SoundEvent}.
      * @param definition The {@link SoundDefinition} that defines the given event.
      */
-    protected void add(final String soundEvent, final SoundDefinition definition) {
-        this.add(ResourceLocation.parse(soundEvent), definition);
+    protected void add(final String soundEvent, final SoundDefinition definition)
+    {
+        this.add(new ResourceLocation(soundEvent), definition);
     }
 
-    private void addSounds(final String soundEvent, final SoundDefinition definition) {
+    private void addSounds(final String soundEvent, final SoundDefinition definition)
+    {
         if (this.sounds.put(soundEvent, definition) != null)
+        {
             throw new IllegalStateException("Sound event '" + this.modId + ":" + soundEvent + "' already exists");
+        }
     }
 
     // Internal handling stuff
-    private void validate() {
+    private void validate()
+    {
         final List<String> notValid = this.sounds.entrySet().stream()
                 .filter(it -> !this.validate(it.getKey(), it.getValue()))
                 .map(Map.Entry::getKey)
                 .map(it -> this.modId + ":" + it)
-                .toList();
+                .collect(Collectors.toList());
         if (!notValid.isEmpty())
+        {
             throw new IllegalStateException("Found invalid sound events: " + notValid);
+        }
     }
 
-    private boolean validate(final String name, final SoundDefinition def) {
+    private boolean validate(final String name, final SoundDefinition def)
+    {
         return def.soundList().stream().allMatch(it -> this.validate(name,it));
     }
 
-    private boolean validate(final String name, final SoundDefinition.Sound sound) {
-        switch (sound.type()) {
+    private boolean validate(final String name, final SoundDefinition.Sound sound)
+    {
+        switch (sound.type())
+        {
             case SOUND: return this.validateSound(name, sound.name());
             case EVENT: return this.validateEvent(name, sound.name());
         }
         // Differently from all the other errors, this is not a 'missing sound' but rather something completely different
-        // that has broken the invariants of this sound definition's provider. In fact, a sound may only be either of
+        // that has broken the invariants of this sound definitions provider. In fact, a sound may only be either of
         // SOUND or EVENT type. Any other values is somebody messing with the internals, reflectively adding something
-        // to an enum or passing `null` to a parameter annotated with `@NotNull`.
+        // to an enum or passing `null` to a parameter annotated with `@Nonnull`.
         throw new IllegalArgumentException("The given sound '" + sound.name() + "' does not have a valid type: expected either SOUND or EVENT, but found " + sound.type());
     }
 
-    private boolean validateSound(final String soundName, final ResourceLocation name) {
+    private boolean validateSound(final String soundName, final ResourceLocation name)
+    {
         final boolean valid = this.helper.exists(name, PackType.CLIENT_RESOURCES, ".ogg", "sounds");
-        if (!valid) {
+        if (!valid)
+        {
             final String path = name.getNamespace() + ":sounds/" + name.getPath() + ".ogg";
             LOGGER.warn("Unable to find corresponding OGG file '{}' for sound event '{}'", path, soundName);
         }
         return valid;
     }
 
-    private boolean validateEvent(final String soundName, final ResourceLocation name) {
+    private boolean validateEvent(final String soundName, final ResourceLocation name)
+    {
         final boolean valid = this.sounds.containsKey(soundName) || ForgeRegistries.SOUND_EVENTS.containsKey(name);
         if (!valid)
+        {
             LOGGER.warn("Unable to find event '{}' referenced from '{}'", name, soundName);
+        }
         return valid;
     }
 
-    private CompletableFuture<?> save(final CachedOutput cache, final Path targetFile) {
-        return DataProvider.saveStable(cache, mapToJson(this.sounds), targetFile);
+    private void save(final HashCache cache, final Path targetFile) throws IOException
+    {
+        DataProvider.save(GSON, cache, this.mapToJson(this.sounds), targetFile);
     }
 
-    private static JsonObject mapToJson(final Map<String, SoundDefinition> map) {
+    private JsonObject mapToJson(final Map<String, SoundDefinition> map)
+    {
         final JsonObject obj = new JsonObject();
         // namespaces are ignored when serializing
         map.forEach((k, v) -> obj.add(k, v.serialize()));
